# jimmy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Makefile  README.md  jimmy.manifest.template
.github/workflows/: build-and-test.yml
assets/: reply-examples.txt
assets/voice-references-summaries/: BREIT-Prospectus-with-previous-supplements.txt  Edwin_LeFevre_Reminiscences_of_a_Stock_Operator.txt  Fact-Card.txt  New Market Wizards.txt  TMAS_Druck.txt  TMAS_Soros.txt  TradeBookFinal.txt
docs/dev-updates/: 2025-01-20-[Update,v1.0.0].md
src/: attest.rs  client.rs  config.rs  constant.rs  main.rs  pipeline.rs  portfolio.rs  strategy.rs  wallet.rs
src/actions/: feed.rs  mod.rs  portfolio.rs  twitter.rs  utils.rs
src/feed/: mod.rs  newsletter.rs  substack.rs
src/jupiter/: mod.rs  swap.rs
src/llm/: azure.rs  mod.rs  scorer.rs  voice_reference.rs
src/price/: coingecko.rs  jupiter.rs  mod.rs
src/store/: iter.rs  map.rs  mod.rs
src/store/leveldb/: key.rs  mod.rs
src/store/rocksdb/: mod.rs
src/token/: jimmy.rs  mod.rs  raydium.rs  store.rs  structs.rs  utils.rs
src/twitter/: client.rs  mod.rs  prompt.rs
