[package]
name = "jimmy"
version = "1.0.0"
edition = "2021"

[features]
default = ["rocks", "async"]
rocks = ["rocksdb"]
levels = ["leveldb", "bytes", "db-key"]
devnet = ["clmm-cli/devnet", "common/devnet"]
async = ["clmm-cli/async", "common/async"]

[dependencies]
solana-sdk = "1.16"
solana-client = "1.16"
solana-account-decoder = "1.16"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
mpl-token-metadata = "3.2.3"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
async-openai = "0.13"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3.3"
base64 = "0.22.1"
rss = "2.0"
rocksdb = { version = "0.22", default-features = false, features = [
    "lz4",
], optional = true }
leveldb = { version = "0.8.6", optional = true }
bytes = { version = "1.0", optional = true }
db-key = { version = "0.0.5", optional = true }
rand = "0.8"
hex = "0.4.3"
uuid = { version = "1.12.1", features = ["v4"] }

clmm-cli = { git = "https://github.com/jimmydottech/raydium-library", rev = "252756edf751e0108f4160921849f813c601c6fe" }
common = { git = "https://github.com/jimmydottech/raydium-library", rev = "252756edf751e0108f4160921849f813c601c6fe" }
tweety-rs = { git = "https://github.com/jimmydottech/tweety-rs", rev = "1e5646e14d1ed61f2362b573fa92337d61378382" }
